--- a/resume.css
+++ b/resume.css
@@ -1,34 +1,31 @@
 body{
-	padding: 14px;
-	font-family: serif;
-	font-size: 14px;
-	font-family: 'Raleway', sans-serif;
+	/*padding: 10px;*/
+	font-size: 13px;
+	font-family: 'Arial';
 }
 
 #header{
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
 	border-bottom-color: #726E6D;
-	padding-bottom: 5px;
+	padding-bottom: 4px;
 }
 
 #name{
-	font-size: 37px;
+	font-size: 35px;
 	font-weight: bold;
 	display: inline-block;
-	/*color: #7D0552;*/
 	color: #990012;
 }
 
 #contact_info_div{
 	padding-top: 5px;
 	float: right;
-	font-size: 14px;
+	font-size: 13px;
 }
 
 .contact_info_tag{
 	float: left;
-	/*color: #7D0552;*/
 	color: #990012;
 }
 
@@ -37,14 +34,11 @@ body{
 }
 
 .section_head{
-	/*float: left;*/
 	text-align: center;
-	padding-top: 7px;
+	padding-top: 6px;
 	font-size: 20px;
 	font-weight: bold;
-	/*color: #7D0552;*/
 	color: #990012;
-	/*width: 50%*/;
 	width: 100%;
 	display: inline-block;
 }
@@ -53,27 +47,32 @@ body{
 	display: inline-block;
 	width: 100%;
 	margin-top: 3px;
-	/*border-left-style: solid;
-	border-left-width: 2px;
-	border-left-color: #726E6D;*/
-	/*padding-left: 10px;*/
 }
 
 .subsection_head{
 	font-size: 19px;
 	margin-top: 2px;
-	/*color: #7D0552;*/
 	color: #990012;
-	/*white-space: pre-wrap;*/
+}
+
+.subsection_role{
+	font-size: 14px;
+	font-weight: bold;
+	color: #726E6D;
+	/*float: left;*/
+	padding-top: 3px;
+}
+
+.subsection_details{
+	font-size: 14px;
+	font-weight: bold;
+	color: #726E6D;
+	float: right;
+	padding-top: 3px;
 }
 
 table{
 	width: 100%;
-}
-
-td{
-	width: 33%;
-	text-align: center;
 }
 
 ul{
@@ -81,22 +80,10 @@ ul{
 	margin-top: 0;
 }
 
-#summary_qualifications{
-	padding-top: 10px;
-}
-
 .coop_job, .project, .activity{
 	width: 100%;
 }
 
-.time_span{
-	font-size: 13px;
-	/*color: #7D0552;*/
-	font-weight: bold;
-	color: #726E6D;
-	float: right;
-	padding-top: 3px;
-}
 .job_title, .project_type, .activity_info{
 	font-weight: bold;
 	color: #726E6D;
