--- a/resume.css
+++ b/resume.css
@@ -9,6 +9,7 @@ body{
 	border-bottom-width: 2px;
 	border-bottom-color: #726E6D;
 	padding-bottom: 4px;
+	position: relative;
 }
 
 #name{
@@ -19,9 +20,12 @@ body{
 }
 
 #contact_info_div{
-	padding-top: 5px;
-	float: right;
+	position: absolute;
 	font-size: 13px;
+	bottom: 0;
+	right: 0;
+	padding-bottom: 5px;
+	padding-right: 2px;
 }
 
 .contact_info_tag{
@@ -59,14 +63,11 @@ body{
 	font-size: 14px;
 	font-weight: bold;
 	color: #726E6D;
-	/*float: left;*/
 	padding-top: 3px;
 }
 
 .subsection_details{
 	font-size: 14px;
-	font-weight: bold;
-	color: #726E6D;
 	float: right;
 	padding-top: 3px;
 }
