--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,4 @@
 body{
-	/*padding: 10px;*/
 	font-size: 13px;
 	font-family: 'Arial';
 }
@@ -73,6 +72,10 @@ body{
 	padding-top: 3px;
 }
 
+.subsection_paragraph_div{
+	padding-top: 3px;
+}
+
 table{
 	width: 100%;
 }
@@ -80,13 +83,15 @@ table{
 ul{
 	padding-top: 0;
 	margin-top: 0;
+	margin-left: -18px;
+	margin-right: -10px;
 }
 
 .coop_job, .project, .activity, .job{
 	width: 100%;
 }
 
-.other_experience{
+.other_experience, .colon_list{
 	font-weight: bold;
 	color: #726E6D;
 }
